--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/ross/requests-futures
 [submodule "third_party/ycmd"]
 	path = third_party/ycmd
-	url = https://github.com/solheim-erick/ycmd
+	url = https://github.com/solheim-erick/ycmd.git
 [submodule "third_party/requests_deps/idna"]
 	path = third_party/requests_deps/idna
 	url = https://github.com/kjd/idna
